[package]
name = "big-fat"
version = "0.1.0"
authors = ["JohnCorby <williamforgames6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
walkdir = "2.3.1"
rodio = "0.13.0"
hound = "3.4.0"
rayon = "1.5.0"
